--- a/index.html
+++ b/index.html
@@ -62,30 +62,31 @@
         <p>
             <font size="3">
                 <b>Join Us & Collaboration</b><br>
-                · Research Assistant / Student Internship in AI for Education. Remote internship is also welcome!<br>
-                <span style="padding-left: 0px;"> <span class="label label-info">Topic</span> Conversational intelligent tutoring systems, human-AI collaborative learning, etc.</span><br>
-                · Research Assistant / Student Internship in Generative AI and Multimodal Fundation Models.<br>
-                <span style="padding-left: 0px;"><span class="label label-info">Topic</span> Knowledge-enhanced reasoning, multi-agent collaboration, etc.</span><br>
+                · Research Assistant / Student Intern in AI for Education. Remote intern is also welcome!<br>
+                <span style="padding-left: 0px;"> <span class="label label-info">Topic</span> Conversational intelligent tutoring systems, Human-AI collaborative learning, etc.</span><br>
+                · Research Assistant / Student Intern in Generative AI and Multimodal Fundation Models.<br>
+                <span style="padding-left: 0px;"><span class="label label-info">Topic</span> Knowledge-enhanced reasoning, Multi-agent collaboration, etc.</span><br>
                 · Research Collaboration in AI for Life Science & Healthcare.<br>
             </font>
         </p>
         <hr>
         <p>
             <font size="3">
-                <span class="label label-danger">News</span> [Nov 2024] Our paper “Learning planning-based reasoning by
-                trajectories
-                collection and process reward synthesizing” got the 🏅 Outstanding Paper Award in EMNLP 2024.<br>
-                <span class="label label-danger">News</span> [Nov. 2024] Present our work “Personality-aware Student
+                <span class="label label-danger">News</span> [Mar. 2025] Our work “Scaling Up Collaborative Dialogue Analysis: An AI-driven Approach to Understanding Dialogue Patterns in Computational Thinking Education” got published in LAK 2025.<br>
+                <span class="label label-danger">News</span> [Jan. 2025] Our paper “CrossIn: An Efficient Instruction Tuning Approach for Cross-Lingual Knowledge Alignment” got the 🏅 Best Paper Award in SumEval@COLING 2025.<br>
+                <span class="label label-danger">News</span> [Nov. 2024] Our paper “Learning planning-based reasoning by
+                trajectories collection and process reward synthesizing” got the 🏅 Outstanding Paper Award in EMNLP 2024.<br>
+                <span class="label label-danger">News</span> [Nov. 2024] Presented our work “Personality-aware Student
                 Simulation for Conversational Intelligent Tutoring Systems” in EMNLP 2024.<br>
-                <span class="label label-danger">News</span> [Sep. 2024] Present our work “Optimizing Code-Switching in
+                <span class="label label-danger">News</span> [Sep. 2024] Presented our work “Optimizing Code-Switching in
                 Conversational Tutoring Systems: A Pedagogical Framework and Evaluation” in SIGDIAL 2024.<br>
                 <span class="label label-danger">News</span> [Sep. 2024] Our paper “CRAFT: Extracting and Tuning
                 Cultural Instructions from the Wild” got the 🏅 Best Paper Award in C3NLP@ACL2024.<br>
-                <span class="label label-danger">News</span> [Feb. 2024] Present our work “Scaffolding Language Learning
+                <span class="label label-danger">News</span> [Feb. 2024] Presented our work “Scaffolding Language Learning
                 via Multi-modal Tutoring Systems with Pedagogical Instructions” in IEEE CAI 2024.<br>
                 <span class="label label-danger">News</span> [Dec. 2023] Our paper “Joint Dialogue Topic Segmentation
-                and Categorization: A Case Study on Clinical Spoken Conversations” got the 🏅 Outstanding Paper Award in
-                EMNLP 2023.<br>
+                and Categorization: A Case Study on Clinical Spoken Conversations” got the 🏅 Outstanding Paper Award in EMNLP 2023.<br>
+                <span class="label label-danger">News</span> [Sep. 2021] Our paper “Coreference-Aware Dialogue Summarization” got the 🏅 Best Paper Award in SIGDIAL 2021.<br>
             </font>
         </p>
         <hr>
@@ -94,9 +95,7 @@
                 <b>Academic Service</b><br>
                 Conference Program Committee and Reviewer: NeurIPS, ICLR, ACL, EMNLP, NAACL, AAAI, etc. <br>
                 Conference Session Chair: ICASSP and Interspeech.<br>
-                Journal Reviewer: IEEE
-                TASLP, ACM CSUR, Neurocomputing, Computer Speech &
-                Language, etc.<br>
+                Journal Reviewer: IEEE TASLP, ACM CSUR, Neurocomputing, Computer Speech & Language, etc.<br>
             </font>
         </p>
     </div>
