--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 via Multi-modal Tutoring Systems with Pedagogical Instructions” in IEEE CAI 2024.<br>
                 <span class="label label-danger">News</span> [Dec. 2023] Our paper “Joint Dialogue Topic Segmentation
                 and Categorization: A Case Study on Clinical Spoken Conversations” got the 🏅 Outstanding Paper Award in EMNLP 2023.<br>
+                <span class="label label-danger">News</span> [Jul. 2022] Presented our work “Learning from Bootstrapping and Stepwise Reinforcement Reward: A Semi-Supervised Framework for Text Style Transfer” in NAACL 2022.<br>
                 <span class="label label-danger">News</span> [Sep. 2021] Our paper “Coreference-Aware Dialogue Summarization” got the 🏅 Best Paper Award in SIGDIAL 2021.<br>
             </font>
         </p>
