--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <span class="label label-danger">Research Interest</span><br>
                     Multimodal and Multilingual Foundation Models.<br>
                     Generative AI for Education, Healthcare, and Life Science.<br>
-                    Reliability, Robustness, and Explainability for Human-Centered AI.<br>
+                    Accessibility, Reliability, and Explainability for Human-Centered AI.<br>
                 </p>
             </div>
             <div class="col-sm-5" align="middle">
@@ -48,7 +48,7 @@
         <p>
             <font size="3">
                 <b>Current Key Projects</b><br>
-                📖 AI for Education Programme<br>
+                🌟 AI for Education Programme | Human-centered AI<br>
                 > Our vision is to transform how people learn knowledge and advance science by creating AI systems that
                 can understand, reason, and collaborate across disciplines and languages.<br>
                 🚀 National Large Language Model Programme (MERaLiON SG)<br>
@@ -61,12 +61,13 @@
         <hr>
         <p>
             <font size="3">
-                <b>Join Us & Collaboration</b><br>
-                · Research Assistant / Student Intern in AI for Education. Remote intern is also welcome!<br>
+                <b>Join Us & Collaboration (📧 just email me)</b><br>
+                <b> > </b> Research Assistant / Student Intern in AI for Education. Remote intern is also welcome!<br>
                 <span style="padding-left: 0px;"> <span class="label label-info">Topic</span> Conversational intelligent tutoring systems, Human-AI collaborative learning, etc.</span><br>
-                · Research Assistant / Student Intern in Generative AI and Multimodal Fundation Models.<br>
+                <b> > </b> Research Assistant / Student Intern in Generative AI and Multimodal Fundation Models.<br>
                 <span style="padding-left: 0px;"><span class="label label-info">Topic</span> Knowledge-enhanced reasoning, Multi-agent collaboration, etc.</span><br>
-                · Research Collaboration in AI for Life Science & Healthcare.<br>
+                <b> > </b> Research Collaboration in AI for Life Science & Healthcare.<br>
+                <span style="padding-left: 0px;"><span class="label label-info">Topic</span> Reach out to me for an online / in-person chat (☕) on next-generation science accelerators, etc.</span><br>
             </font>
         </p>
         <hr>
@@ -84,10 +85,10 @@
                 Cultural Instructions from the Wild” got the 🏅 Best Paper Award in C3NLP@ACL2024.<br>
                 <span class="label label-danger">News</span> [Feb. 2024] Presented our work “Scaffolding Language Learning
                 via Multi-modal Tutoring Systems with Pedagogical Instructions” in IEEE CAI 2024.<br>
-                <span class="label label-danger">News</span> [Dec. 2023] Our paper “Joint Dialogue Topic Segmentation
+                <span class="label label-default">News</span> [Dec. 2023] Our paper “Joint Dialogue Topic Segmentation
                 and Categorization: A Case Study on Clinical Spoken Conversations” got the 🏅 Outstanding Paper Award in EMNLP 2023.<br>
-                <span class="label label-danger">News</span> [Jul. 2022] Presented our work “Learning from Bootstrapping and Stepwise Reinforcement Reward: A Semi-Supervised Framework for Text Style Transfer” in NAACL 2022.<br>
-                <span class="label label-danger">News</span> [Sep. 2021] Our paper “Coreference-Aware Dialogue Summarization” got the 🏅 Best Paper Award in SIGDIAL 2021.<br>
+                <span class="label label-default">News</span> [Jul. 2022] Presented our work “Learning from Bootstrapping and Stepwise Reinforcement Reward: A Semi-Supervised Framework for Text Style Transfer” in NAACL 2022.<br>
+                <span class="label label-default">News</span> [Sep. 2021] Our paper “Coreference-Aware Dialogue Summarization” got the 🏅 Best Paper Award in SIGDIAL 2021.<br>
             </font>
         </p>
         <hr>
