--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         <p>
             <font size="3">
                 <b>Join Us & Collaboration (📧 just email me)</b><br>
-                <b> > </b> Research Assistant / Student Intern in AI for Education. Remote intern is also welcome!<br>
+                ○ Research Assistant / Student Intern in AI for Education. Remote intern is also welcome!<br>
                 <span style="padding-left: 0px;"> <span class="label label-info">Topic</span> Conversational intelligent tutoring systems, Human-AI collaborative learning, etc.</span><br>
-                <b> > </b> Research Assistant / Student Intern in Generative AI and Multimodal Fundation Models.<br>
+                ○ Research Assistant / Student Intern in Generative AI and Multimodal Fundation Models.<br>
                 <span style="padding-left: 0px;"><span class="label label-info">Topic</span> Knowledge-enhanced reasoning, Multi-agent collaboration, etc.</span><br>
-                <b> > </b> Research Collaboration in AI for Life Science & Healthcare.<br>
+                ○ Research Collaboration in AI for Life Science & Healthcare.<br>
                 <span style="padding-left: 0px;"><span class="label label-info">Topic</span> Reach out to me for an online / in-person chat (☕) on next-generation science accelerators, etc.</span><br>
             </font>
         </p>
