--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="gEQQW3Rysd1uOa2M3W9man_Ub5ExM2PCxCyg6ZfSJLw" />
     <link href="css/bootstrap.css" rel="stylesheet" media="screen">
     <link href="css/my-style.css" rel="stylesheet" media="screen">
     <script src="js/jquery.js"></script>
