--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 🌟 AI for Education Programme | Human-centered AI<br>
                 > Our vision is to transform how people learn knowledge and advance science by creating AI systems that
                 can understand, reason, and collaborate across disciplines and languages.<br>
+                > Special Interest Group on Human-AI Collaborative Learning, Exploration, and Discovery (<a href="https://sigcoled.github.io/">SIGCoLED</a>)<br>
                 🚀 National Large Language Model Programme (MERaLiON SG)<br>
                 > Working on improving multilingual and multimodal LLMs' capabilities of knowledge and reasoning.<br>
                 <p>
