--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+    <meta name="title" content="Zhengyuan Liu | Institute for Infocomm Research, A*STAR">
+    <meta name="description" content="Zhengyuan Liu is currently the Asst. Head of the AI4EDU Programme, and the Tech Lead of Multimodal Generative AI @I2R, A*STAR, Singapore.">
+    <meta name="keywords" content="zhengyuan liu, generative AI, human-centered AI, large language models">
+    <meta name="author" content="Zhengyuan Liu">
     <meta name="google-site-verification" content="gEQQW3Rysd1uOa2M3W9man_Ub5ExM2PCxCyg6ZfSJLw" />
     <link href="css/bootstrap.css" rel="stylesheet" media="screen">
     <link href="css/my-style.css" rel="stylesheet" media="screen">
