--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 🌟 AI for Education Programme | Human-centered AI<br>
                 > Our vision is to transform how people learn knowledge and advance science by creating AI systems that
                 can understand, reason, and collaborate across disciplines and languages.<br>
-                > Special Interest Group on Human-AI Collaborative Learning, Exploration, and Discovery (<a href="https://sigcoled.github.io/">SIGCoLED</a>)<br>
+                > Special Interest Group on Human-AI Collaborative Learning, Exploration, and Discovery (<a href="https://sigcoled.github.io/">SIGCoLED</a>)<br><br>
                 🚀 National Large Language Model Programme (MERaLiON SG)<br>
                 > Working on improving multilingual and multimodal LLMs' capabilities of knowledge and reasoning.<br>
                 <p>
@@ -79,6 +79,9 @@
         <hr>
         <p>
             <font size="3">
+                <span class="label label-danger">News</span> [Jun. 2025] Our work “COGENT: A Curriculum-oriented Framework for Generating Grade-appropriate Educational Content” will appear in BEA 2025.<br>
+                <span class="label label-danger">News</span> [May. 2025] Our work “SingaKids: A Multilingual Multimodal Dialogic Tutor for Language Learning” will appear in ACL 2025.<br>
+                <span class="label label-danger">News</span> [May. 2025] Our work “Reinforcing Compositional Retrieval: Retrieving Step-by-Step for Composing Informative Contexts” will appear in ACL 2025.<br>
                 <span class="label label-danger">News</span> [Mar. 2025] Our work “Scaling Up Collaborative Dialogue Analysis: An AI-driven Approach to Understanding Dialogue Patterns in Computational Thinking Education” got published in LAK 2025.<br>
                 <span class="label label-danger">News</span> [Jan. 2025] Our paper “CrossIn: An Efficient Instruction Tuning Approach for Cross-Lingual Knowledge Alignment” got the 🏅 Best Paper Award in SumEval@COLING 2025.<br>
                 <span class="label label-danger">News</span> [Nov. 2024] Our paper “Learning planning-based reasoning by
