--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 </p>
             </div>
             <div class="col-sm-5" align="middle">
-                <img src="assets/img/photo.jpeg" class="img-responsive" alt="Zhengyuan"
-                     width="200">
+                <img src="assets/img/Zhengyuan_Photo.jpg" class="img-responsive" alt="Zhengyuan"
+                     width="148">
             </div>
         </div>
         <hr>
