--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                     IEEE Senior Member<br>
                 </p>
                 <p>
-                    [<a href="mailto:i.liuzhengyuan@gmail.com">Email</a>]
-                    [<a href="https://scholar.google.com.sg/citations?user=tqzidGsAAAAJ">Google Scholar</a>]
-                    [<a href="https://www.linkedin.com/in/zhengyuanliu">LinkedIn</a>]
+                    [<a href="mailto:i.liuzhengyuan@gmail.com">Email</a>]&nbsp;&nbsp;
+                    [<a href="https://scholar.google.com.sg/citations?user=tqzidGsAAAAJ">Google Scholar</a>]&nbsp;&nbsp;
+                    [<a href="https://www.linkedin.com/in/zhengyuanliu">LinkedIn</a>]&nbsp;&nbsp;
                 </p>
                 <p>
                     <span class="label label-danger">Research Interest</span><br>
@@ -53,10 +53,10 @@
         <p>
             <font size="3">
                 <b>Current Key Projects</b><br>
-                🌟 AI for Education Programme | Human-centered AI<br>
+                🌟 Human-centered AI | AI for Education Programme <br>
                 > Our vision is to transform how people learn knowledge and advance science by creating AI systems that
                 can understand, reason, and collaborate across disciplines and languages.<br>
-                > Special Interest Group on Human-AI Collaborative Learning, Exploration, and Discovery (<a href="https://sigcoled.github.io/">SIGCoLED</a>)<br><br>
+                > We are building the Special Interest Group on Human-AI Collaborative Learning, Exploration, and Discovery (<a href="https://sigcoled.github.io/">SIGCoLED</a>).<br><br>
                 🚀 National Large Language Model Programme (MERaLiON SG)<br>
                 > Working on improving multilingual and multimodal LLMs' capabilities of knowledge and reasoning.<br>
                 <p>
@@ -68,7 +68,7 @@
         <p>
             <font size="3">
                 <b>Join Us & Collaboration (📧 just email me)</b><br>
-                ○ Research Assistant / Student Intern in AI for Education. Remote intern is also welcome!<br>
+                ○ Research Assistant / Student Intern in Human-centered AI. Remote intern is also welcome!<br>
                 <span style="padding-left: 0px;"> <span class="label label-info">Topic</span> Conversational intelligent tutoring systems, Human-AI collaborative learning, etc.</span><br>
                 ○ Research Assistant / Student Intern in Generative AI and Multimodal Fundation Models.<br>
                 <span style="padding-left: 0px;"><span class="label label-info">Topic</span> Knowledge-enhanced reasoning, Multi-agent collaboration, etc.</span><br>
@@ -79,9 +79,9 @@
         <hr>
         <p>
             <font size="3">
-                <span class="label label-danger">News</span> [Jun. 2025] Our work “COGENT: A Curriculum-oriented Framework for Generating Grade-appropriate Educational Content” will appear in BEA 2025.<br>
-                <span class="label label-danger">News</span> [May. 2025] Our work “SingaKids: A Multilingual Multimodal Dialogic Tutor for Language Learning” will appear in ACL 2025.<br>
-                <span class="label label-danger">News</span> [May. 2025] Our work “Reinforcing Compositional Retrieval: Retrieving Step-by-Step for Composing Informative Contexts” will appear in ACL 2025.<br>
+                <span class="label label-danger">News</span> [Jun. 2025] Presented our work “COGENT: A Curriculum-oriented Framework for Generating Grade-appropriate Educational Content” in BEA 2025.<br>
+                <span class="label label-danger">News</span> [May. 2025] Presented our work “SingaKids: A Multilingual Multimodal Dialogic Tutor for Language Learning” in ACL 2025 (Oral).<br>
+                <span class="label label-danger">News</span> [May. 2025] Our work “Reinforcing Compositional Retrieval: Retrieving Step-by-Step for Composing Informative Contexts” is published in ACL 2025.<br>
                 <span class="label label-danger">News</span> [Mar. 2025] Our work “Scaling Up Collaborative Dialogue Analysis: An AI-driven Approach to Understanding Dialogue Patterns in Computational Thinking Education” got published in LAK 2025.<br>
                 <span class="label label-danger">News</span> [Jan. 2025] Our paper “CrossIn: An Efficient Instruction Tuning Approach for Cross-Lingual Knowledge Alignment” got the 🏅 Best Paper Award in SumEval@COLING 2025.<br>
                 <span class="label label-danger">News</span> [Nov. 2024] Our paper “Learning planning-based reasoning by
