--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 <p>
                     Asst. Head of the AI4EDU Programme<br>
                     Tech Lead of Multimodal Generative AI Group<br>
-                    Institute for Infocomm Research, A*STAR, Singapore<br>
+                    Institute for Infocomm Research<br>
+                    Agency for Science, Technology and Research (A*STAR), Singapore<br>
                     IEEE Senior Member<br>
                 </p>
                 <p>
@@ -60,7 +61,7 @@
                 🚀 National Large Language Model Programme (MERaLiON SG)<br>
                 > Working on improving multilingual and multimodal LLMs' capabilities of knowledge and reasoning.<br>
                 <p>
-                    <li><i>“Imagination is more important than knowledge.” – Albert Einstein.</i></li>
+                    <i> ► “Imagination is more important than knowledge.” – Albert Einstein.</i>
                 <p>
             </font>
         </p>
@@ -72,39 +73,43 @@
                 <span style="padding-left: 0px;"> <span class="label label-info">Topic</span> Conversational intelligent tutoring systems, Human-AI collaborative learning, etc.</span><br>
                 ○ Research Assistant / Student Intern in Generative AI and Multimodal Fundation Models.<br>
                 <span style="padding-left: 0px;"><span class="label label-info">Topic</span> Knowledge-enhanced reasoning, Multi-agent collaboration, etc.</span><br>
-                ○ Research Collaboration in AI for Life Science & Healthcare.<br>
+                ○ Research Collaboration in AI for Life Science.<br>
                 <span style="padding-left: 0px;"><span class="label label-info">Topic</span> Reach out to me for an online / in-person chat (☕) on next-generation science accelerators, etc.</span><br>
             </font>
         </p>
         <hr>
         <p>
             <font size="3">
+                <span class="label label-danger">News</span> [Nov. 2025] Our work “Persuasion Dynamics in LLMs: Investigating Robustness and Adaptability in Knowledge and Safety with DuET-PD” is published in EMNLP 2025.<br>
+                <span class="label label-danger">News</span> [Nov. 2025] Our work “CCL-XCoT: An Efficient Cross-Lingual Knowledge Transfer Method for Mitigating Hallucination Generation” is published in EMNLP 2025.<br>
                 <span class="label label-danger">News</span> [Jun. 2025] Presented our work “COGENT: A Curriculum-oriented Framework for Generating Grade-appropriate Educational Content” in BEA 2025.<br>
                 <span class="label label-danger">News</span> [May. 2025] Presented our work “SingaKids: A Multilingual Multimodal Dialogic Tutor for Language Learning” in ACL 2025 (Oral).<br>
                 <span class="label label-danger">News</span> [May. 2025] Our work “Reinforcing Compositional Retrieval: Retrieving Step-by-Step for Composing Informative Contexts” is published in ACL 2025.<br>
                 <span class="label label-danger">News</span> [Mar. 2025] Our work “Scaling Up Collaborative Dialogue Analysis: An AI-driven Approach to Understanding Dialogue Patterns in Computational Thinking Education” got published in LAK 2025.<br>
-                <span class="label label-danger">News</span> [Jan. 2025] Our paper “CrossIn: An Efficient Instruction Tuning Approach for Cross-Lingual Knowledge Alignment” got the 🏅 Best Paper Award in SumEval@COLING 2025.<br>
+                <span class="label label-danger">News</span> [Jan. 2025] Our paper “CrossIn: An Efficient Instruction Tuning Approach for Cross-Lingual Knowledge Alignment” won the 🏅 Best Paper Award in SumEval@COLING 2025.<br>
                 <span class="label label-danger">News</span> [Nov. 2024] Our paper “Learning planning-based reasoning by
-                trajectories collection and process reward synthesizing” got the 🏅 Outstanding Paper Award in EMNLP 2024.<br>
+                trajectories collection and process reward synthesizing” won the 🏅 Outstanding Paper Award in EMNLP 2024.<br>
                 <span class="label label-danger">News</span> [Nov. 2024] Presented our work “Personality-aware Student
                 Simulation for Conversational Intelligent Tutoring Systems” in EMNLP 2024.<br>
                 <span class="label label-danger">News</span> [Sep. 2024] Presented our work “Optimizing Code-Switching in
                 Conversational Tutoring Systems: A Pedagogical Framework and Evaluation” in SIGDIAL 2024.<br>
                 <span class="label label-danger">News</span> [Sep. 2024] Our paper “CRAFT: Extracting and Tuning
-                Cultural Instructions from the Wild” got the 🏅 Best Paper Award in C3NLP@ACL2024.<br>
+                Cultural Instructions from the Wild” won the 🏅 Best Paper Award in C3NLP@ACL2024.<br>
                 <span class="label label-danger">News</span> [Feb. 2024] Presented our work “Scaffolding Language Learning
                 via Multi-modal Tutoring Systems with Pedagogical Instructions” in IEEE CAI 2024.<br>
                 <span class="label label-default">News</span> [Dec. 2023] Our paper “Joint Dialogue Topic Segmentation
-                and Categorization: A Case Study on Clinical Spoken Conversations” got the 🏅 Outstanding Paper Award in EMNLP 2023.<br>
+                and Categorization: A Case Study on Clinical Spoken Conversations” won the 🏅 Outstanding Paper Award in EMNLP 2023.<br>
                 <span class="label label-default">News</span> [Jul. 2022] Presented our work “Learning from Bootstrapping and Stepwise Reinforcement Reward: A Semi-Supervised Framework for Text Style Transfer” in NAACL 2022.<br>
-                <span class="label label-default">News</span> [Sep. 2021] Our paper “Coreference-Aware Dialogue Summarization” got the 🏅 Best Paper Award in SIGDIAL 2021.<br>
+                <span class="label label-default">News</span> [Sep. 2021] Our paper “Coreference-Aware Dialogue Summarization” won the 🏅 Best Paper Award in SIGDIAL 2021.<br>
             </font>
         </p>
         <hr>
         <p>
             <font size="3">
                 <b>Academic Service</b><br>
-                Conference Program Committee and Reviewer: NeurIPS, ICLR, ACL, EMNLP, NAACL, AAAI, etc. <br>
+                Assistant Program Chair in NeurIPS 2025. <br>
+                Conference Program Committee, Reviewer, and Area Chair:<br>
+                NeurIPS, ICLR, ACL, EMNLP, NAACL, AAAI, LAK, LERC, ICASSP, Interspeech, etc.<br>
                 Conference Session Chair: ICASSP and Interspeech.<br>
                 Journal Reviewer: IEEE TASLP, ACM CSUR, Neurocomputing, Computer Speech & Language, etc.<br>
             </font>
