--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
             <font size="3">
                 <b>Current Key Projects</b><br>
                 🌟 Human-centered AI | AI for Education Programme <br>
-                > Our vision is to transform how people learn knowledge and advance science by creating AI systems that
-                can understand, reason, and collaborate across disciplines and languages.<br>
-                > We are building the Special Interest Group on Human-AI Collaborative Learning, Exploration, and Discovery (<a href="https://sigcoled.github.io/">SIGCoLED</a>).<br><br>
+                > We conduct interdisciplinary research on how humans and intelligent systems (not limited to LLMs) can effectively and efficiently learn from each other, and explore the world and universe together.<br>
+                > We are building the Special Interest Group on Human-AI Collaborative Learning, Exploration, and Discovery (<a href="https://sigcoled.github.io/">InspAIre</a>).<br><br>
                 🚀 National Large Language Model Programme (MERaLiON SG)<br>
                 > Working on improving multilingual and multimodal LLMs' capabilities of knowledge and reasoning.<br>
                 <p>
