--- a/index.html
+++ b/index.html
@@ -79,27 +79,28 @@
         <hr>
         <p>
             <font size="3">
-                <span class="label label-danger">News</span> [Nov. 2025] Our work “Persuasion Dynamics in LLMs: Investigating Robustness and Adaptability in Knowledge and Safety with DuET-PD” is published in EMNLP 2025.<br>
-                <span class="label label-danger">News</span> [Nov. 2025] Our work “CCL-XCoT: An Efficient Cross-Lingual Knowledge Transfer Method for Mitigating Hallucination Generation” is published in EMNLP 2025.<br>
-                <span class="label label-danger">News</span> [Jun. 2025] Presented our work “COGENT: A Curriculum-oriented Framework for Generating Grade-appropriate Educational Content” in BEA 2025.<br>
-                <span class="label label-danger">News</span> [May. 2025] Presented our work “SingaKids: A Multilingual Multimodal Dialogic Tutor for Language Learning” in ACL 2025 (Oral).<br>
-                <span class="label label-danger">News</span> [May. 2025] Our work “Reinforcing Compositional Retrieval: Retrieving Step-by-Step for Composing Informative Contexts” is published in ACL 2025.<br>
-                <span class="label label-danger">News</span> [Mar. 2025] Our work “Scaling Up Collaborative Dialogue Analysis: An AI-driven Approach to Understanding Dialogue Patterns in Computational Thinking Education” got published in LAK 2025.<br>
-                <span class="label label-danger">News</span> [Jan. 2025] Our paper “CrossIn: An Efficient Instruction Tuning Approach for Cross-Lingual Knowledge Alignment” won the 🏅 Best Paper Award in SumEval@COLING 2025.<br>
-                <span class="label label-danger">News</span> [Nov. 2024] Our paper “Learning planning-based reasoning by
-                trajectories collection and process reward synthesizing” won the 🏅 Outstanding Paper Award in EMNLP 2024.<br>
-                <span class="label label-danger">News</span> [Nov. 2024] Presented our work “Personality-aware Student
-                Simulation for Conversational Intelligent Tutoring Systems” in EMNLP 2024.<br>
-                <span class="label label-danger">News</span> [Sep. 2024] Presented our work “Optimizing Code-Switching in
-                Conversational Tutoring Systems: A Pedagogical Framework and Evaluation” in SIGDIAL 2024.<br>
-                <span class="label label-danger">News</span> [Sep. 2024] Our paper “CRAFT: Extracting and Tuning
-                Cultural Instructions from the Wild” won the 🏅 Best Paper Award in C3NLP@ACL2024.<br>
-                <span class="label label-danger">News</span> [Feb. 2024] Presented our work “Scaffolding Language Learning
-                via Multi-modal Tutoring Systems with Pedagogical Instructions” in IEEE CAI 2024.<br>
+                <span class="label label-danger">News</span> [Dec. 2025] Our SingaX team (A*STAR, NTU, NUS) won the 2nd prize 🏅 in the Embodied Agent Interface (EAI) Challenge in NeurIPS 2025. <a href="https://foundation-models-meet-embodied-agents.github.io/eai_challenge/#winners" target="_blank">[Award Link]</a> <br>
+                <span class="label label-danger">News</span> [Nov. 2025] Our work “Persuasion Dynamics in LLMs: Investigating Robustness and Adaptability in Knowledge and Safety with DuET-PD” is published in EMNLP 2025. <a href="https://aclanthology.org/2025.emnlp-main.81/" target="_blank">[Paper]</a> <br>
+                <span class="label label-danger">News</span> [Nov. 2025] Our work “CCL-XCoT: An Efficient Cross-Lingual Knowledge Transfer Method for Mitigating Hallucination Generation” is published in EMNLP 2025. <a href="https://aclanthology.org/2025.findings-emnlp.93/" target="_blank">[Paper]</a> <br>
+                <span class="label label-danger">News</span> [Jun. 2025] Presented our work “COGENT: A Curriculum-oriented Framework for Generating Grade-appropriate Educational Content” in BEA 2025. <a href="https://aclanthology.org/2025.bea-1.10/" target="_blank">[Paper]</a> <br>
+                <span class="label label-danger">News</span> [May. 2025] Presented our work “SingaKids: A Multilingual Multimodal Dialogic Tutor for Language Learning” in ACL 2025 (Oral). <a href="https://aclanthology.org/2025.acl-industry.86/" target="_blank">[Paper]</a> <br>
+                <span class="label label-danger">News</span> [May. 2025] Our work “Reinforcing Compositional Retrieval: Retrieving Step-by-Step for Composing Informative Contexts” is published in ACL 2025. <a href="https://aclanthology.org/2025.findings-acl.396/" target="_blank">[Paper]</a> <br>
+                <span class="label label-danger">News</span> [Mar. 2025] Our work “Scaling Up Collaborative Dialogue Analysis: An AI-driven Approach to Understanding Dialogue Patterns in Computational Thinking Education” got published in LAK 2025. <a href="https://dl.acm.org/doi/10.1145/3706468.3706474" target="_blank">[Paper]</a> <br>
+                <span class="label label-danger">News</span> [Jan. 2025] Our paper “CrossIn: An Efficient Instruction Tuning Approach for Cross-Lingual Knowledge Alignment” won the 🏅 Best Paper Award in SumEval@COLING 2025. <a href="https://aclanthology.org/2025.sumeval-2.2/" target="_blank">[Paper]</a> <br>
+                <span class="label label-default">News</span> [Nov. 2024] Our paper “Learning planning-based reasoning by
+                trajectories collection and process reward synthesizing” won the 🏅 Outstanding Paper Award in EMNLP 2024. <a href="https://aclanthology.org/2024.emnlp-main.20/" target="_blank">[Paper]</a> <br>
+                <span class="label label-default">News</span> [Nov. 2024] Presented our work “Personality-aware Student
+                Simulation for Conversational Intelligent Tutoring Systems” in EMNLP 2024. <a href="https://aclanthology.org/2024.emnlp-main.37/" target="_blank">[Paper]</a> <br>
+                <span class="label label-default">News</span> [Sep. 2024] Presented our work “Optimizing Code-Switching in
+                Conversational Tutoring Systems: A Pedagogical Framework and Evaluation” in SIGDIAL 2024. <a href="https://aclanthology.org/2024.sigdial-1.43/" target="_blank">[Paper]</a> <br>
+                <span class="label label-default">News</span> [Sep. 2024] Our paper “CRAFT: Extracting and Tuning
+                Cultural Instructions from the Wild” won the 🏅 Best Paper Award in C3NLP@ACL2024. <a href="https://aclanthology.org/2024.c3nlp-1.4/" target="_blank">[Paper]</a> <br>
+                <span class="label label-default">News</span> [Feb. 2024] Presented our work “Scaffolding Language Learning
+                via Multi-modal Tutoring Systems with Pedagogical Instructions” in IEEE CAI 2024. <a href="https://www.computer.org/csdl/proceedings-article/cai/2024/540900b258/1Z06jcKcDni" target="_blank">[Paper]</a> <br>
                 <span class="label label-default">News</span> [Dec. 2023] Our paper “Joint Dialogue Topic Segmentation
-                and Categorization: A Case Study on Clinical Spoken Conversations” won the 🏅 Outstanding Paper Award in EMNLP 2023.<br>
-                <span class="label label-default">News</span> [Jul. 2022] Presented our work “Learning from Bootstrapping and Stepwise Reinforcement Reward: A Semi-Supervised Framework for Text Style Transfer” in NAACL 2022.<br>
-                <span class="label label-default">News</span> [Sep. 2021] Our paper “Coreference-Aware Dialogue Summarization” won the 🏅 Best Paper Award in SIGDIAL 2021.<br>
+                and Categorization: A Case Study on Clinical Spoken Conversations” won the 🏅 Outstanding Paper Award in EMNLP 2023. <a href="https://aclanthology.org/2023.emnlp-industry.19/" target="_blank">[Paper]</a> <br>
+                <span class="label label-default">News</span> [Jul. 2022] Presented our work “Learning from Bootstrapping and Stepwise Reinforcement Reward: A Semi-Supervised Framework for Text Style Transfer” in NAACL 2022. <a href="https://aclanthology.org/2022.findings-naacl.201/" target="_blank">[Paper]</a> <br>
+                <span class="label label-default">News</span> [Sep. 2021] Our paper “Coreference-Aware Dialogue Summarization” won the 🏅 Best Paper Award in SIGDIAL 2021. <a href="https://aclanthology.org/2021.sigdial-1.53/" target="_blank">[Paper]</a> <br>
             </font>
         </p>
         <hr>
