--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="title" content="Zhengyuan Liu | Institute for Infocomm Research, A*STAR">
+    <meta name="title" content="Zhengyuan Liu | Institute for Infocomm Research, A*STAR, Singapore">
     <meta name="description" content="Zhengyuan Liu is currently the Asst. Head of the AI4EDU Programme, and the Tech Lead of Multimodal Generative AI @I2R, A*STAR, Singapore.">
     <meta name="keywords" content="zhengyuan liu, generative AI, human-centered AI, large language models">
     <meta name="author" content="Zhengyuan Liu">
@@ -13,7 +13,7 @@
     <link href="css/my-style.css" rel="stylesheet" media="screen">
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
-    <title>Zhengyuan Liu | Institute for Infocomm Research, A*STAR</title>
+    <title>Zhengyuan Liu | A*STAR, Singapore</title>
 </head>
 
 <body>
@@ -25,18 +25,17 @@
             Zhengyuan Liu
         </h1>
         <div class="row">
-            <div class="col-sm-7">
+            <div class="col-sm-7" style="font-size: 1.1em;">
                 <p>
                     Asst. Head of the AI4EDU Programme<br>
                     Tech Lead of Multimodal Generative AI Group<br>
-                    Institute for Infocomm Research<br>
                     Agency for Science, Technology and Research (A*STAR), Singapore<br>
                     IEEE Senior Member<br>
                 </p>
                 <p>
                     [<a href="mailto:i.liuzhengyuan@gmail.com">Email</a>]&nbsp;&nbsp;
-                    [<a href="https://scholar.google.com.sg/citations?user=tqzidGsAAAAJ">Google Scholar</a>]&nbsp;&nbsp;
-                    [<a href="https://www.linkedin.com/in/zhengyuanliu">LinkedIn</a>]&nbsp;&nbsp;
+                    [<a href="https://scholar.google.com.sg/citations?user=tqzidGsAAAAJ" target="_blank">Google Scholar</a>]&nbsp;&nbsp;
+                    [<a href="https://www.linkedin.com/in/zhengyuanliu" target="_blank">LinkedIn</a>]&nbsp;&nbsp;
                 </p>
                 <p>
                     <span class="label label-danger">Research Interest</span><br>
@@ -56,7 +55,7 @@
                 <b>Current Key Projects</b><br>
                 🌟 Human-centered AI | AI for Education Programme <br>
                 > We conduct interdisciplinary research on how humans and intelligent systems (not limited to LLMs) can effectively and efficiently learn from each other, and explore the world and universe together.<br>
-                > We are building the Special Interest Group on Human-AI Collaborative Learning, Exploration, and Discovery (<a href="https://sigcoled.github.io/">InspAIre</a>).<br><br>
+                > We are building the Special Interest Group on Human-AI Collaborative Learning, Exploration, and Discovery (<a href="https://sigcoled.github.io/" target="_blank">InspAIre</a>).<br><br>
                 🚀 National Large Language Model Programme (MERaLiON SG)<br>
                 > Working on improving multilingual and multimodal LLMs' capabilities of knowledge and reasoning.<br>
                 <p>
@@ -118,7 +117,7 @@
     <hr>
 </div>
 
-<footer style="display: flex; justify-content: center;">© 2025, Zhengyuan Liu</footer>
+<footer style="display: flex; justify-content: center;">© 2015 - 2025, Zhengyuan Liu</footer>
 
 </body>
 
